[project]
name = "build-converter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pypdfium2>=4.30.0",
    "cython>=3.0.11",
    "docling>=2.8.3",
    "setuptools>=68.0.0",
    "python-call-graph>=2.1.2",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[build-system]
requires = ["setuptools>=68.0.0", "wheel", "Cython"] 
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
